# Fall_Protection_Robot

./: .gitignore  CLAUDE.md  Robot_Product_Engineering.docx  Robot_Product_Engineering.html  Robot_Product_Engineering.odt  Robot_Product_Engineering.txt
ros2_ws/src/ass_robot_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ass_robot_bringup/ass_robot_bringup/: cmd_vel_bridge.py  path_follower.py
ros2_ws/src/ass_robot_description/: package.xml
ros2_ws/src/ass_robot_description/config/: joint_names_ASS_Robot.yaml
ros2_ws/src/ass_robot_description/launch/: display.launch.py
ros2_ws/src/ass_robot_description/meshes/: Upper_Swivel.STL
ros2_ws/src/ass_robot_description/urdf/: ASS_Robot.urdf
ros2_ws/src/ass_robot_gazebo/: CMakeLists.txt  package.xml
ros2_ws/src/ass_robot_gazebo/launch/: gazebo.launch.py
ros2_ws/src/ass_robot_gazebo/worlds/: living_room.sdf  robot_world.sdf
ros2_ws3/src/ass_robot_description/: CMakeLists.txt  package.xml
ros2_ws3/src/ass_robot_description/meshes/: Castor.STL  Castor_Wheel.STL  Right_wheel.STL
ros2_ws3/src/mobile_robot/: CMakeLists.txt  package.xml
ros2_ws3/src/mobile_robot/launch/: full_system.launch.py  gazebo_model.launch.py  nav2.launch.py
ros2_ws3/src/mobile_robot/model/ass_robot_description/: CMakeLists.txt
ros2_ws3/src/mobile_robot/model/ass_robot_description/launch/: display.launch.py
ros2_ws3/src/mobile_robot/parameters/: bridge_parameters.yaml  controllers.yaml  nav2_params.yaml  nav2_rviz.rviz
ros2_ws3/src/mobile_robot/scripts/: person_follower.py  person_sim.py
ros2_ws3/src/mobile_robot/worlds/: Test_Figuren.sdf  office_small.world
ros2_ws3/videos/: 2026-04-21 21-05-59.mkv
(+4 files in other folders)
