<?xml version="1.0"?>
<package format="3">
  <name>ass_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup utilities for ASS_Robot</description>
  <maintainer email="arno.gaelens@gmail.com">Arno</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
