<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ass_robot_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Harmonic simulation world and launch files for ASS_Robot</description>
  <maintainer email="arno.gaelens@gmail.com">Arno</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ass_robot_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
